get applied job listing created

--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -29,7 +29,7 @@
 
                 <a routerLink="/candidate/my-profile" class="default-btn">View My Profile</a>
             </div>
-            <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
+            <!-- <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button> -->
         </div>
     </div>
 
@@ -38,6 +38,7 @@
     </div>
     <div class="container mt-3 p-0">
         <div class="job-card p-3" style="font-size: larger;">
+
             <!-- <table class="table table-hover caption-top">
                 <caption>Job Application Stats</caption>
 
@@ -73,7 +74,7 @@
 
 
 
-            <ol class="list-group list-grou">
+            <ol class="list-group list-group">
                 <div class="dropdown">
 
                     <li class="list-group-item d-flex justify-content-between align-items-start">
