--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -145,7 +145,7 @@
 
     <div class="col-lg-12 col-sm-6 col-md-6">
 
-        <div class="job-card " *ngFor="let ad of finalArray">
+        <div class="job-card mb-5" *ngFor="let ad of finalArray">
             <div class="content">
 
                 <div class="job-image">
@@ -192,10 +192,11 @@
                     
                     </ul>        -->
 
-                    <ul class="list-group list-group-flush" style="font-size: large;">
+                    <ul class="list-group list-group-flush">
                         <li  class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-briefcase-line"></i> {{ad.career_level}}</li>
                         <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-profile-line"></i> {{ad.job_type}} </li>
                         <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-award-line"></i> {{ad.experience}} Years</li>
+                        <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-time-line"></i> {{ad.apply_date_time}}</li>
                         <li class="list-group-item" style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'"><i class="ri-wallet-line"></i> {{ad.salary_minimum}} - {{ad.salary_maximum}} / {{ad.salary_type}} </li>
         
                         <!-- <li class="list-group-item">{{ jobToArray[0][1].job_title }}</li> -->
@@ -217,6 +218,7 @@
 
                 <!-- <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button> -->
             </div>
+            
         </div>
 
 
