--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -61,7 +61,7 @@
             <img src="assets/images/banner/user4.jpg" alt="user">
         </div>
         <div class="shape9">
-            <img src="assets/images/banner/user3.jpg" alt="user">
+            <img src="assets/images/banner/user3.jpg" alt="user" width="1000" height="10">
             <!-- <div class="other-into-content">
                 <img src="assets/images/banner/shape5.jpg" alt="shape">
             </div> -->
