home-page-images-replaced

--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -37,15 +37,15 @@
     </div>
     <div class="banner-shapes">
         <div class="shape1">
-            <img src="assets/images/banner/user2.jpg" alt="user">
+            <img src="assets/images/banner/user2.jpg" alt="user" width="100px">
         </div>
-        <div class="shape2">
-            <img src="assets/images/banner/shape2.png" alt="shape">
+        <div class="shape2" style="width:100px; height: 50px;">
+            <img src="assets/images/banner/shape2.png" alt="shape" style="width: 100px;">
         </div>
         <div class="shape3">
             <img src="assets/images/banner/user1.jpg" alt="user">
         </div>
-        <div class="shape4">
+        <div class="shape4" style="width: 120px;">
             <img src="assets/images/banner/shape5.jpg" alt="shape">
         </div>
         <div class="shape5">
@@ -55,13 +55,13 @@
             <img src="assets/images/banner/shape1.png" alt="shape">
         </div>
         <div class="shape7">
-            <img src="assets/images/banner/shape6.jpg" alt="shape">
+            <img src="assets/images/banner/shape6.jpg" alt="shape" width="75px">
         </div>
         <div class="shape8">
-            <img src="assets/images/banner/user4.jpg" alt="user">
+            <img src="assets/images/banner/user4.jpg" alt="user" width="120px">
         </div>
         <div class="shape9">
-            <img src="assets/images/banner/user3.jpg" alt="user" width="1000" height="10">
+            <img src="assets/images/banner/user3.jpg" alt="user" width="100px">
             <!-- <div class="other-into-content">
                 <img src="assets/images/banner/shape5.jpg" alt="shape">
             </div> -->
