--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -33,12 +33,12 @@
                     <div class="col-lg-12 col-md-12">
                         <div class="form-group">
                             <label>Full Name <span>*</span></label>
-                            <input type="text" class="form-control" id="candidate_name" value="{{objToArray[0][1].name}}" required>
+                            <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_name" value="{{objToArray[0][1].name}}" required>
                         </div>
 
                         <div class="form-group">
                             <label>Head Line <span>*</span></label>
-                            <input type="text" class="form-control" id="candidate_headline" value="" required>
+                            <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_headline" value="" required>
                         </div>
 
 
@@ -174,7 +174,7 @@
                      <div class="col-lg-6 col-md-6">
                          <div class="form-group">
                              <label>Skills (Separate with commas) <span>*</span></label>
-                             <input type="text" class="form-control" required>
+                             <input type="text" style="text-transform: capitalize;" class="form-control" required>
                          </div>
                      </div>
                     <!-- <div class="col-lg-6 col-md-6">
@@ -204,9 +204,9 @@
                                     <div style="font-size: large; font-weight: 400;">Experience:{{i+1}}</div>
                                     <br>
 
-                                    <input type="text" class="form-control" name="value{(i)}" id="expRole{{i}}" placeholder="Role">
+                                    <input type="text" class="form-control" style="text-transform: capitalize;" name="value{(i)}" id="expRole{{i}}" placeholder="Role">
                                     <br>
-                                    <input type="text" class="form-control" name="value{(i)}" id="expCompanyName{{i}}" placeholder="Company Name">
+                                    <input type="text" class="form-control" style="text-transform: capitalize;" name="value{(i)}" id="expCompanyName{{i}}" placeholder="Company Name">
                                     <br>
                                     Start Date:
                                     <input type="date" class="form-control" name="value{(i)}" id="expDateStart{{i}}">
@@ -250,9 +250,9 @@
                                     <br>
                                     <div style="font-size: large; font-weight: 400;">Education:{{i+1}}</div>
                                     <br>
-                                    <input type="text" class="form-control" name="" id = "eduType{{i}}" placeholder="Education Type">
+                                    <input type="text" class="form-control" style="text-transform: capitalize;" name="" id = "eduType{{i}}" placeholder="Education Type">
                                     <br>
-                                    <input type="text" class="form-control" name="" id="eduInstituteName{{i+1}}" placeholder="Institute Name">
+                                    <input type="text" class="form-control" style="text-transform: capitalize;" name="" id="eduInstituteName{{i+1}}" placeholder="Institute Name">
                                     <br>
 
                                     Start Date:
