done-in-location-tag-also

--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -57,7 +57,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Location <span></span></label>
-                            <input type="text" class="form-control" id="candidate_location">
+                            <input type="text" class="form-control" style="text-transform: capitalize;" id="candidate_location">
                             <!-- <select class="form-select" id="category_id">
                                 
                                 <option selected>Accounting / Finance</option>
