--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -1,7 +1,10 @@
 <div class="banner-area">
     <div class="container">
         <div class="banner-content">
-            <h1>Save TIME Save MONEY </h1>
+            <div class="heading">
+            <h1>Save TIME</h1>
+            <h1>Save MONEY </h1>
+        </div>
             <div class="banner-form" *ngIf="!postajob;">
                 <form>
                     <div class="row">
