updated-routing-to-my-dashboard

--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -35,17 +35,17 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/employer/dashboard">
+                                <a routerLink="/employer/my-dashboard">
                                     Employer Dashboard
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/job-listings">
+                                <a routerLink="/jobs/listings">
                                     Job Packages
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/job-listings">
+                                <a routerLink="/jobs/listings">
                                     Jobs Featured 
                                 </a>
                             </li>
@@ -62,7 +62,7 @@
                         <h3>For Candidates</h3>
                         <ul class="footer-list">
                             <li>
-                                <a routerLink="/job-listings">
+                                <a routerLink="/jobs/listings">
                                     Browse Jobs
                                 </a>
                             </li>
@@ -72,12 +72,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/candidate/dashboard">
+                                <a routerLink="/candidate/my-dashboard">
                                     Candidate Dashboard
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/job-listings">
+                                <a routerLink="/jobs/listings">
                                     Browse Categories
                                 </a>
                             </li>
