--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -32,12 +32,12 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         <div class="form-group">
-                            <label>Full Name <span>*</span></label>
+                            <label>Full name <span>*</span></label>
                             <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_name" value="{{objToArray[0][1].name}}" required>
                         </div>
 
                         <div class="form-group">
-                            <label>Head Line <span>*</span></label>
+                            <label>Profile headline <span>*</span></label>
                             <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_headline" value="" required>
                         </div>
 
@@ -45,7 +45,7 @@
                     </div>
                     <div class="col-lg-12 col-md-12">
                         <div class="form-group">
-                            <label>About Me <span>*</span></label>
+                            <label>About me <span>*</span></label>
                             <div class="NgxEditor__Wrapper">
                                 <!-- <ngx-editor-menu [editor]="editor" [toolbar]="toolbar">
                                 </ngx-editor-menu>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label>Phone Number <span>*</span> </label>
+                            <label>Phone number <span>*</span> </label>
                             <input type="number" class="form-control" id="candidate_phone_number" value = "{{objToArray[0][1].mobile_number}}" required>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
 
                      <div class="col-lg-6 col-md-6">
                          <div class="form-group">
-                             <label>Upload Resume (.pdf, .doc) <span>*</span></label>
+                             <label>Upload resume (.pdf, .doc) <span>*</span></label>
                              <input type="file" class="form-control" id="customFile" accept=".doc, .docx, .pdf" required>
 
                              <!-- <select class="form-select" id="qualification" required>
@@ -173,7 +173,7 @@
 
                      <div class="col-lg-6 col-md-6">
                          <div class="form-group">
-                             <label>Skills (Separate with commas) <span>*</span></label>
+                             <label>Skills (separate with commas) <span>*</span></label>
                              <input type="text" style="text-transform: capitalize;" class="form-control" required>
                          </div>
                      </div>
@@ -214,15 +214,15 @@
                                 End Date:
                                 <input type="date" class="form-control" name="value{(i)}" id="expDateEnd{{i}}">
                                 <br>
-                                <button class="default-btn p-2" style = "font-size: small;"type="button" (click)="remExp(i)">Remove Experience</button>
-                                <button class="default-btn p-2 mx-2" (click)="addExp()" type="button" style="font-size: small;">Add Experience</button>
+                                <button class="default-btn p-2" style = "font-size: small;"type="button" (click)="remExp(i)">Remove Experience-{{i+1}}</button>
+                                <button class="default-btn p-2 mx-2" (click)="addExp()" type="button" style="font-size: small;">Add Experience-{{i+2}}</button>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
-                            <label class="mt-3">Education Details<span>*</span></label>
+                            <label class="mt-3">Education details<span>*</span></label>
                             
                             
                             <button (click)="addEdu()" class="default-btn p-2" type="button" style="font-size: small;">Add Education</button>
@@ -264,8 +264,8 @@
                                     <input type="date" class="form-control" name="" id="eduDateEnd{{i+1}}">
                                     <br>
 
-                                    <button (click)="remEdu(i)"class="default-btn p-2" type="button" style = "font-size: small;">Remove Education</button>
-                                    <button (click)="addEdu()" class="default-btn p-2 mx-2" type="button" style="font-size: small;">Add Education</button>
+                                    <button (click)="remEdu(i)"class="default-btn p-2" type="button" style = "font-size: small;">Remove Education-{{i+1}}</button>
+                                    <button (click)="addEdu()" class="default-btn p-2 mx-2" type="button" style="font-size: small;">Add Education-{{i+2}}</button>
 
                                 </div>
                                 </div>
