--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -88,7 +88,7 @@
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
 
-                            <div class="fw-bold">Shortlisted</div>
+                            <div class="fw-bold">In-Touch</div>
 
                            
                         </div>
@@ -98,7 +98,7 @@
                     <li class="list-group-item d-flex justify-content-between align-items-start">
                         <div class="ms-2 me-auto">
 
-                            <div class="fw-bold">Selected</div>
+                            <div class="fw-bold">Shortlisted</div>
 
                            
                         </div>
