--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -324,7 +324,8 @@
         </div>
         <br>
         <div class="col-lg-12 col-md-12">
-            <button type="button" class="default-btn">Submit & Preview</button>
+            <button type="button"  class="default-btn">Submit</button>
+            <button type="button"  class="default-btn mx-3">Preview</button>
         </div>
     </div>
 </div>
