partially-candidate-details-preview-done

--- a/src/app/components/pages/candidate-details-preview-page/candidate-details-preview-page.component.html
+++ b/src/app/components/pages/candidate-details-preview-page/candidate-details-preview-page.component.html
@@ -19,6 +19,13 @@
 <div class="candidate-details-area pt-100 pb-75">
     <div class="container">
         <div class="row">
+            <div class="mb-3 d-flex align-items-center"> 
+
+                <i style="color: green; font-size: 30px; margin-left: 410px;"class="ri-arrow-left-line"></i> 
+                <a  style="text-align: center; margin-right: 500px; font-size: large;"routerLink="/candidate/my-profile/edit">Go Back and Edit</a>
+                <!-- <a  style="text-align: center;"routerLink="/post-a-job" class="default-btn mx-2 p-2">Submit</a> -->
+            </div>
+    
             <div class="col-lg-3 col-md-12">
                 <div class="candidate-details-sidebar">
                     <div class="profile">
