--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -39,20 +39,20 @@
         </div>
     </div>
     <div class="banner-shapes">
-        <div class="shape1">
-            <img src="assets/images/banner/user2.jpg" alt="user" width="100px">
+        <div class="shape1" style="border-radius: 50px; background-color: white;">
+            <img src="assets/images/banner/user2.jpg" alt="user" width="100px" style="background-color: white;" >
         </div>
-        <div class="shape2" style="width:100px; height: 50px;">
+        <div class="shape2">
             <img src="assets/images/banner/shape2.png" alt="shape" style="width: 100px;">
         </div>
         <div class="shape3">
             <img src="assets/images/banner/user1.jpg" alt="user">
         </div>
-        <div class="shape4" style="width: 120px;">
-            <img src="assets/images/banner/shape5.jpg" alt="shape">
+        <div class="shape4">
+            <img src="assets/images/banner/shape5.jpg" alt="shape" width="100px" style="border-radius: 50px;">
         </div>
         <div class="shape5">
-            <img src="assets/images/banner/shape4.png" alt="shape">
+            <img src="assets/images/banner/shape4.png" alt="shape" width="100px">
         </div>
         <div class="shape6">
             <img src="assets/images/banner/shape1.png" alt="shape">
@@ -61,7 +61,7 @@
             <img src="assets/images/banner/shape6.jpg" alt="shape" width="75px">
         </div>
         <div class="shape8">
-            <img src="assets/images/banner/user4.jpg" alt="user" width="120px">
+            <img src="assets/images/banner/user4.jpg" alt="user" width="80px" style="border-radius: 50px;">
         </div>
         <div class="shape9">
             <img src="assets/images/banner/user3.jpg" alt="user" width="100px">
