changed-blogs-to-additional-services

--- a/src/app/components/common/blog/blog.component.html
+++ b/src/app/components/common/blog/blog.component.html
@@ -1,10 +1,10 @@
 <div class="blog-area pt-100 pb-75">
     <div class="container">
         <div class="section-title text-start">
-            <h2>From Our Blogs</h2>
+            <h2>Additional Services</h2>
             <div class="bar"></div>
             <p>We collect reviews from our users so you can get an honest opinion of what an experience with our website are really like!</p>
-            <a routerLink="/blog" class="link-btn"> Browse More Blog <i class="ri-arrow-right-s-line"></i></a>
+            <a routerLink="/blog" class="link-btn"> Browse More Services <i class="ri-arrow-right-s-line"></i></a>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6">
