links updated and jobs posed size displayed in employer dash

--- a/src/app/components/common/recent-jobs/recent-jobs.component.html
+++ b/src/app/components/common/recent-jobs/recent-jobs.component.html
@@ -56,9 +56,15 @@
                     </div> -->
 
                     <!-- <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button> -->
-
+                
                 </div>
 
+            </div>
+            <br>
+            <div class="col-xl-12 col-lg-12 col-sm-12" style="text-align: center;">
+                <div class="browse-btn">
+                    <a routerLink="/jobs/listings"> Browse All Jobs <i class="ri-arrow-right-s-line"></i></a>
+                </div>
             </div>
 
 
