--- a/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
+++ b/src/app/components/pages/employer-dashboard/employer-dashboard-page.component.html
@@ -80,7 +80,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-3">
-                                    <h2>07</h2>
+                                    <h2>{{empDasharraySize}}</h2>
                                     <p>Active Jobs</p>
                                 </div>
                                 <div class="col-3 border-success border-right">
@@ -428,7 +428,7 @@
                     <i class="ri-bookmark-line"></i>
                 </button> -->
                 </div>
-                <a routerLink="/jobs-posted"
+                <a routerLink="/jobs/posted"
                     ><div
                         style="
                             font-size: larger;
@@ -476,12 +476,12 @@
             </div>
             </div> -->
             </div>
-            <div class="col-lg-4 col-md-12 m-0">
-                <div class="company-details-sidebar">
+            <!-- <div class="col-lg-4 col-md-12 m-0"> -->
+                <!-- <div class="company-details-sidebar"> -->
                     <!-- <h4 class="mb-5 mt-0">Personal Details</h4> -->
 
-                    <div class="widget-item rounded">
-                        <div>Other Important Stats</div>
+                    <!-- <div class="widget-item rounded"> -->
+                        <!-- <div>Other Important Stats</div> -->
                         <!--                     
                     <div class="job-company">
                         <img src="assets/images/job/job1.jpg" alt="job-image">
@@ -549,9 +549,9 @@
                     </ul>
                     <a href="#" class="default-btn">View Your Profile</a>
                 </div> -->
-                    </div>
-                </div>
-            </div>
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
 
             <!-- <canvas id="lineChart"></canvas> -->
 
