--- a/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
+++ b/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
@@ -206,7 +206,7 @@
                         </div>
                     </div> -->
                     <div class="col-lg-12 col-md-12">
-                        <button type="button" (click)="createJob()" class="default-btn">Post Job</button>
+                        <!-- <button type="button" (click)="createJob()" class="default-btn">Post Job</button> -->
                         <button type="button" (click)="previewJob()" routerLink="/post-a-job/preview" class="default-btn mx-3">Preview</button>
                     </div>
                 </div>
