--- a/src/app/components/pages/company-jobs-posted/company-jobs-posted-page.component.html
+++ b/src/app/components/pages/company-jobs-posted/company-jobs-posted-page.component.html
@@ -69,12 +69,12 @@
                             <div class="content">
                                 
                                 <div class="job-image">
-                                    <a (click)="idPass(job[1].id)" routerLink="/job-details">
+                                    <a (click)="idPass(job[1].id)" routerLink="/jobs/details">
                                         <img src="assets/images/job/job1.jpg" alt="job-image">
                                     </a>
                                 </div>
                                 
-                                <h3> <a (click)="idPass(job[1].id)" routerLink="/job-details"> {{ job[1].job_title }}</a></h3>
+                                <h3> <a (click)="idPass(job[1].id)" routerLink="/jobs/details"> {{ job[1].job_title }}</a></h3>
                                 <ul class="job-list1" style="font-size: medium;">
 
                                     <li><i class="ri-briefcase-line"></i> {{job[1].career_level}}</li>
