browse more link aligned home page

--- a/src/app/components/common/top-company/top-company.component.html
+++ b/src/app/components/common/top-company/top-company.component.html
@@ -4,7 +4,6 @@
             <h2>Registered Top Company</h2>
             <div class="bar"></div>
             <p>We collect reviews from our users so you can get an honest opinion of what an experience with our website is really like!</p>
-            <a routerLink="/company" class="link-btn"> Browse All Companies <i class="ri-arrow-right-s-line"></i></a>
         </div>
         <div class="row justify-content-center">
             <div class="col-xl-3 col-lg-4 col-sm-6">
@@ -71,6 +70,8 @@
                     <a routerLink="/company-details" class="company-btn">Open Jobs - (20)</a>
                 </div>
             </div>
+            <a routerLink="/company" class="link-btn d-flex align-items-center d-flex justify-content-center"> Browse All Companies <i class="ri-arrow-right-s-line"></i></a>
+
         </div>
     </div>
 </div>
