--- a/src/app/components/common/blog/blog.component.html
+++ b/src/app/components/common/blog/blog.component.html
@@ -4,7 +4,6 @@
             <h2>Additional Services</h2>
             <div class="bar"></div>
             <p>We collect reviews from our users so you can get an honest opinion of what an experience with our website are really like!</p>
-            <a routerLink="/blog" class="link-btn"> Browse More Services <i class="ri-arrow-right-s-line"></i></a>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6">
@@ -68,8 +67,10 @@
                         </ul>
                         <h3><a routerLink="/blog-details">Your Social Media Accounts Will be Your New CV</a></h3>
                     </div>
+                    
                 </div>
             </div>
+            <a routerLink="/blog" class="link-btn d-flex justify-content-center d-flex align-items-center"> Browse More Services <i class="ri-arrow-right-s-line"></i></a>
         </div>
     </div>
 </div>
