candidadte preview page updated

--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -20,6 +20,7 @@
                 <li class="urgent">Urgent</li> -->
 
             </ul>
+            <!-- <a routerLink="/candidate/my-profile/edit" class="default-btn">Edit profile</a> -->
             <div class="d-md-flex align-items-center justify-content-between">
                 <a href="mailto:{{objToArray[0][1].email_id}}">
                     <div class="last-date">{{objToArray[0][1].email_id}}</div>
