--- a/src/app/components/pages/candidate-details-preview-page/candidate-details-preview-page.component.html
+++ b/src/app/components/pages/candidate-details-preview-page/candidate-details-preview-page.component.html
@@ -21,8 +21,8 @@
         <div class="row">
             <div class="mb-3 d-flex align-items-center"> 
 
-                <i style="color: green; font-size: 30px; margin-left: 410px;"class="ri-arrow-left-line"></i> 
-                <a  style="text-align: center; margin-right: 500px; font-size: large;"routerLink="/candidate/my-profile/edit">Go Back and Edit</a>
+                <i style="color: green; font-size: 30px; margin-left:0px;"class="ri-arrow-left-line"></i> 
+                <a  style="text-align: center; margin-right: 200px; font-size: large;"routerLink="/candidate/my-profile/edit">Go Back and Edit</a>
                 <!-- <a  style="text-align: center;"routerLink="/post-a-job" class="default-btn mx-2 p-2">Submit</a> -->
             </div>
     
@@ -88,6 +88,18 @@
                         <a href="javascript:void(0)" class="download-btn">PDF Formate CV <i class="ri-file-download-line"></i></a>
                     </div>
                 </div>
+                <div class="mb-3 d-flex align-items-center"> 
+
+                    <i style="color: green; font-size: 30px; margin-left:0px;"class="ri-arrow-left-line"></i> 
+                    <a  style="text-align: center; margin-right: 0px; font-size: large;"routerLink="/candidate/my-profile/edit">Go Back and Edit</a>
+                    <!-- <a  style="text-align: center;"routerLink="/post-a-job" class="default-btn mx-2 p-2">Submit</a> -->
+                    
+                </div>
+                <div>
+                    <button type="button" class="default-btn p-2">Submit</button>
+                </div>
+
+
             </div>
             <div class="col-lg-9 col-md-12">
                 <div class="candidate-details-desc">
