--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                     </li>
                     <li class="nav-item" *ngIf="isUserLoggedIn;">
                         <a (click)="openDashboard()" id="dashboard_component" class="nav-link" routerLinkActive="active"
-                            [routerLinkActiveOptions]="{exact: true}">
+                            [routerLinkActiveOptions]="{exact: true}" href="#/candidate/my-dashboard">
                             Dashboard
                         </a>
                     </li>
