--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -158,7 +158,7 @@
 
                      <div class="col-lg-6 col-md-6">
                          <div class="form-group">
-                             <label>Upload resume (.pdf, .doc) <span>*</span></label>
+                             <label>Upload CV (.pdf, .doc) <span>*</span></label>
                              <input type="file" class="form-control" id="customFile" accept=".doc, .docx, .pdf" required>
 
                              <!-- <select class="form-select" id="qualification" required>
@@ -327,8 +327,8 @@
         </div>
         <br>
         <div class="col-lg-12 col-md-12">
-            <button type="button"  class="default-btn">Submit</button>
-            <button type="button" (click)="candidateProfilePrev()" routerLink="/candidate/my-profile/preview"  class="default-btn mx-3">Preview</button>
+            <!-- <button type="button"  class="default-btn">Submit</button> -->
+            <button type="button" (click)="candidateProfilePrev()" routerLink="/candidate/my-profile/preview"  class="default-btn p-3">Preview</button>
         </div>
     </div>
 </div>
