--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -37,6 +37,11 @@
                         </div>
 
                         <div class="form-group">
+                            <label>What defines you <span>*</span></label>
+                            <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_role" value="" placeholder="Like Web developer, App developer, Finance consultant ..." required>
+                        </div>
+
+                        <div class="form-group">
                             <label>Profile headline <span>*</span></label>
                             <input type="text" style="text-transform: capitalize;" class="form-control" id="candidate_headline" value="" required>
                         </div>
