--- a/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
+++ b/src/app/components/pages/candidate-my-profile-edit/candidate-my-profile-edit-page.component.html
@@ -333,7 +333,7 @@
         <br>
         <div class="col-lg-12 col-md-12">
             <!-- <button type="button"  class="default-btn">Submit</button> -->
-            <button type="button" (click)="candidateProfilePrev()" routerLink="/candidate/my-profile/preview"  class="default-btn p-3">Preview</button>
+            <button type="button" (click)="candidateProfilePrev()" routerLink="/candidate/my-profile/preview"  class="default-btn p-3">Save Changes</button>
         </div>
     </div>
 </div>
