--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -306,7 +306,7 @@
                             <i class="ri-user-3-line"></i> Employer
                         </a>
 
-                        <a *ngIf="postajob;" routerLink="/post-a-job" class="default-btn" style="margin-left:10px;">
+                        <a *ngIf="postajob;" routerLink="/post-a-job" (click) = "formClear()" class="default-btn" style="margin-left:10px;">
                             <i class="ri-user-3-line"></i> Post a Job
                         </a>
 
