footer section social media logos size increased

--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -164,27 +164,28 @@
                         <p>2022 © Work From Home </p>
                     </div>
                 </div>
+                
                 <div class="col-lg-6 col-md-5">
                     <div class="copy-right-social-link">
                         <ul class="social-link">
                             <li>
                                 <a href="https://www.facebook.com/" target="_blank">
-                                    <i class="ri-facebook-fill"></i>
+                                    <i class="ri-facebook-fill" style="font-size: x-large;"></i>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/" target="_blank">
-                                    <i class="ri-instagram-fill"></i>
+                                    <i class="ri-instagram-fill" style="font-size: x-large;"></i>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/" target="_blank">
-                                    <i class="ri-twitter-fill"></i>
+                                    <i class="ri-twitter-fill" style="font-size: x-large;"></i>
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/" target="_blank">
-                                    <i class="ri-linkedin-fill"></i>
+                                    <i class="ri-linkedin-fill" style="font-size: x-large;"></i>
                                 </a>
                             </li>
                         </ul>
