--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -2,8 +2,10 @@
     <div class="container">
         <div class="banner-content">
             <div class="heading">
-            <h1>Save TIME</h1>
-            <h1>Save MONEY </h1>
+            <div style="margin-bottom:10px">
+                <h1  style="margin-right: 12px; margin-bottom: 0px; padding-bottom: 0px;">Save TIME &</h1>
+                <h1  style="margin-top: -42px; padding-top: 15px; margin-bottom: 2px;">Save MONEY </h1>
+            </div>
         </div>
             <div class="banner-form" *ngIf="!postajob;">
                 <form>
