employer side search bar added

--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -7,7 +7,7 @@
                 <h1  style="margin-top: -42px; padding-top: 15px; margin-bottom: 2px;">Save MONEY </h1>
             </div>
         </div>
-            <div class="banner-form" *ngIf="!postajob;">
+            <div class="banner-form">
                 <form>
                     <div class="row">
                         <div class="col-lg-9 col-md-9">
