popular bar visibility check

--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -28,7 +28,7 @@
                     </div>
                 </form>
             </div>
-            <div class="popular-search" *ngIf="!postajob;">
+            <div class="popular-search" *ngIf="postajob;">
                 <span class="title">Popular Search: </span>
                 <a routerLink="/job-listing">Moonlighting</a>
                 <!-- <a routerLink="/job-listing">Developer</a> -->
