changed ui of candidate dashboard

--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -35,105 +35,43 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-1" style="text-align: center;">
-        <h3>Job Application Stats</h3>
-    </div>
-    <div class="container mt-3 p-0">
-        <div class="job-card p-3" style="font-size: larger;">
-
-            <!-- <table class="table table-hover caption-top">
-                <caption>Job Application Stats</caption>
-
-                <thead>
-                  <tr>
-                    <th scope="col">Sr.No</th>
-                    <th scope="col">Selected <span> (3) </span> </th>
-                    <th scope="col">Not-Selected <span> (1) </span> </th>
-                    <th scope="col">In-Touch <span> (5) </span> </th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
-                </tbody>
-              </table> -->
-
-
-
-
-            <ol class="list-group list-group">
-                <div class="dropdown">
-
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-
-                            <div class="fw-bold">Applied</div>
-
+    <div class="container-fluid mt-5">
+        <div class="inner-title text-center " style="text-align: center;">
+            <!-- <h4>Job Application Stats</h4> -->
+           
+            <div class="col-12 col-md-12 col-lg-12">
+                <div
+                    class="col-10 col-md-10 col-lg-10 justify-content"
+                    style="margin-left: 50%; transform: translateX(-50%)"
+                >
+                    <div class="job-card" style="padding-left: 2px;">
+                        
+                        <div class="card-body" style="padding: 0px;">
+                            <div class="row">
+                                <div class="col-3">
+                                    <h2 style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'">07</h2>
+                                    <p>Applied</p>
+                                </div>
+                                <div class="col-3 border-success border-right">
+                                    <h2 style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'">07</h2>
+                                    <p>In-touch</p>
+                                </div>
+                                <div class="col-3 border-success border-right">
+                                    <h2 style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'">07</h2>
+                                    <p>Selected</p>
+                                </div>
+                                <div class="col-3">
+                                    <h2 style="cursor: default;" onMouseOver="this.style.color='#00CA99'" onMouseOut="this.style.color='Black'">07</h2>
+                                    <p>Shortlisted</p>
+                                </div>
+                            </div>
                         </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-
-                            <div class="fw-bold">In-Touch</div>
-
-                           
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-start">
-                        <div class="ms-2 me-auto">
-
-                            <div class="fw-bold">Shortlisted</div>
-
-                           
-                        </div>
-                        <span class="badge bg-primary rounded-pill">14</span>
-
-                    </li>
+                    </div>
                 </div>
-
-<!-- 
-                <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                        <div class="fw-bold">In-Touch</div>
-                        Content for list item
-                    </div>
-                    <span class="badge bg-primary rounded-pill">14</span>
-                </li>
-
-
-                <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                        <div class="fw-bold">Not-Selected</div>
-                        Content for list item
-                    </div>
-                    <span class="badge bg-primary rounded-pill">14</span>
-                </li> -->
-            </ol>
-
-
-
+            </div>
         </div>
     </div>
-
+    
 
 
 
@@ -141,8 +79,8 @@
 
 
 
-<h3 style="text-align: center;" class="mt-5">Your Applications</h3>
 
+<h3 style="text-align: center;" class="mt-5">Your Applications</h3>
 <div class="row p-5">
 
     <div class="col-lg-12 col-sm-6 col-md-6">
