home page services section poluated

--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -166,7 +166,7 @@
                 </div>
                 
                 <div class="col-lg-6 col-md-5">
-                    <div class="copy-right-social-link">
+                    <div class="copy-right-social-link mx-3">
                         <ul class="social-link">
                             <li>
                                 <a href="https://www.facebook.com/" target="_blank">
